--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 .container {
-    background-image: url("./assests/bg.jpg");
+    background-image: url("./assets/bg.jpg");
     background-color: #7754f8;
     background-size: cover;
     font-family: 'Roboto Mono', sans-serif;
